--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -598,7 +598,7 @@ print(analytic_data_within_tidy)
 But notice that the new column occasion is of the type character. We need it to be a factor. So use the code below to do so:
 
 ```{r}
-analytic_data_within_tidy <-analytic_data_within_tidy %>%
+analytic_data_within_tidy <- analytic_data_within_tidy %>%
   mutate(occasion = as_factor(occasion))
 ```
 
@@ -672,7 +672,7 @@ glimpse(analytic_data_within_nway)
 We convert both the sex and id columns to factors with the mutate() command below:
 
 ```{r}
-analytic_data_within_nway <-analytic_data_within_nway %>%
+analytic_data_within_nway <- analytic_data_within_nway %>%
   mutate(id = as_factor(id),
          sex = as_factor(sex))
 ```
@@ -680,7 +680,7 @@ analytic_data_within_nway <-analytic_data_within_nway %>%
 The sex column is a factor but we have to tell the computer that 1 indicates male and 2 indicates female.
 
 ```{r}
-analytic_data_within_nway <-analytic_data_within_nway %>%
+analytic_data_within_nway <- analytic_data_within_nway %>%
   mutate(sex = fct_recode(sex,
                           male = "1",
                           female = "2"))
@@ -817,7 +817,7 @@ print(analytic_data_nway_tidy)
 But notice that the new column occasion is of the type character. We need it to be a factor. So use the code below to do so:
 
 ```{r}
-analytic_data_nway_tidy <-analytic_data_nway_tidy %>%
+analytic_data_nway_tidy <- analytic_data_nway_tidy %>%
   mutate(food = as_factor(food_type),
          temperature = as_factor(temperature))
 ```
@@ -902,7 +902,7 @@ analytic_data_survey <- analytic_data_survey %>%
 The participant identification number in the id column is a numeric column, so we have handle that column on it's own. 
 
 ```{r}
-analytic_data_survey <-analytic_data_survey %>%
+analytic_data_survey <- analytic_data_survey %>%
   mutate(id = as_factor(id))
 ```
 
@@ -914,6 +914,7 @@ glimpse(analytic_data_survey)
 
 Inspect the output of the glimpse() command and make sure you have converted all categorical variables to factors - especially those you will use as predictors.
 
+**Note:** f you have factors like sex that have numeric data in the column (e.g, 1 and 2) instead of male/female you need to handle the situation differently. The preceding section, Experiment: Within N-way, illustrates how to handle this scenario.
 
 ### Factor screening
 
@@ -985,7 +986,7 @@ outdf$sd = round(outdf$sd,2)
 outdf
 ```
 
-With respect to the multi-item scale, it makes sense to look at sets of items rather than all of the items at once. This is because sometime items from different scales use response ranges. For example, for one measure might use a response scale with a range from 1 to 5 whereas for another measure might use a response scale with a range from 1 to 7. This is undesirable from a psychometric point of view, as discussed previously, but it if happens it your data - look at the scale items separately to make it easy to see out of range values.
+With respect to the multi-item scales, it makes sense to look at sets of items rather than all of the items at once. This is because sometime items from different scales use response ranges. For example, for one measure might use a response scale with a range from 1 to 5 whereas for another measure might use a response scale with a range from 1 to 7. This is undesirable from a psychometric point of view, as discussed previously, but it if happens it your data - look at the scale items separately to make it easy to see out of range values.
 
 We begin by looking at the items in the first scale, self-esteem. Possible items responses for this scale range from 1 to 5, make sure all responses are in this range. If any values fall outside this range, you may need to check the original data source or replace them with missing values - as described previously.
 
@@ -1085,7 +1086,7 @@ analytic_data_survey <- analytic_data_survey %>%
               pattern = "_rev15")
 ```
 
-You can use the glimpse() command to see the result of your work. If you compare this to values from the previous glimpse() command you can see they have changed. Also notice the column names not longer indicate the items are reverse-keyed.
+You can use the glimpse() command to see the result of your work. If you compare this to values from the previous glimpse() command you can see they have changed. Also notice the column names no longer indicate the items are reverse-keyed.
 
 ```{r,echo=TRUE,eval=TRUE}
 glimpse(analytic_data_survey)
@@ -1135,9 +1136,7 @@ analytic_data_survey %>%
 
 We calculate the scale scores using the rowwise() command. The mean() command provides the mean of columns by default - not people. We use the rowwise() command in the code below to make the mean() command  work across columns (within participants) rather than within columns. The mutate command calculates the scale score for each person. The c_across() command combined with the starts_with() command ensures the items we want averaged together are the items that are averaged together. Notice there is a separate mutate line for each scale. The ungroup() command turns off the rowwise() command. We end the code block by removing the item-level data from the data set.
 
-**Important:** Take note of how we names the scale variables (self_esteem, job_sat) using a slightly different convention than our items. That is, these scale scores were picked so that they would *not* be selected by a starts_with("esteem") or starts_with("jobsat"). Why? Because we later use those commands to remove the item-level data. We would want the command designed to remove the item-level data to also remove the scale we just calculated! This example illustrates how carefully you need to think about your naming conventions.
-
-
+**Important:** Take note of how we names the scale variables (e.g., self_esteem, job_sat) use a slightly different convention than our items. That is, these scale labels were picked so that they would *not* be selected by a starts_with("esteem") or starts_with("jobsat"). Why? Because we later use those commands to remove the item-level data. We would want the command designed to remove the item-level data to also remove the scale we just calculated! This example illustrates how carefully you need to think about your naming conventions.
 
 ```{r}
 analytic_data_survey <- analytic_data_survey %>% 
@@ -1163,23 +1162,51 @@ You now have two data sets analytic_data_survey and analytic_data_survey_items. 
 
 ## Surveys: Multiple Occasions
 
-```{r, include=FALSE}
+This section outlines a workflow appropriate for when you have multiple occasion survey data. The data corresponds to a design where the researcher has measured, age, sex, eye color, self-esteem, and job satisfaction at each of two times points. Self-esteem and job satisfaction were measured with multi-item scales with reverse-keyed items.
+
+To Begin:
+
+* Use the Files tab to confirm you have the data: data_item_time.csv
+
+* Start a new script for this example. Don't forget to start the script name with "script_".
+
+
+```{r, results='hide'}
+# Date: YYYY-MM-DD
+# Name: your name here
+# Example: Multiple occasion survey
+
+# Load data
 library(tidyverse)
 
-raw_data_occasions <- read_csv("data_item_time.csv")
+my_missing_value_codes <- c("-999", "", "NA")
 
+raw_data_occasions <- read_csv(file = "data_item_time.csv",
+                               na = my_missing_value_codes)
+```
+
+
+We load the initial data into a raw_data_occasions but immediately make a copy we will work with called analytic_data_occasions. It's good to keep a copy of the raw data for reference if you encounter problems.
+
+```{r}
 analytic_data_occasions <- raw_data_occasions
 
 ```
 
-```{r, eval=FALSE}
-library(tidyverse)
+Remove empty row and columns from your data using the remove_empty_cols() and remove_empty_rows(), respectively. As well, clean the names of your columns to ensure they conform to tidyverse naming conventions. 
 
-raw_data_occasions <- read_csv("data_item_time.csv")
+```{r, results = "hide"}
+library(janitor)
 
-analytic_data_occasions <- raw_data_occasions
-
+# Initial cleaning
+analytic_data_occasions <- analytic_data_occasions %>%
+  remove_empty("rows") %>%
+  remove_empty("cols") %>%
+  clean_names()
 ```
+
+You can confirm the column names following our naming convention with the glimpse command - and see the data type for each column.
+
 
 ```{r}
 glimpse(analytic_data_occasions)
@@ -1187,27 +1214,28 @@ glimpse(analytic_data_occasions)
 
 ### Creating factors
 
-Following initial cleaning, identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. Inspect glimpse() output - if you followed our data entry naming conventions categorical variables should be of the type character
+Following initial cleaning, we identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. Inspect the glimpse() output - if you followed our data entry naming conventions, categorical variables should be of the type character. 
+
 
 ```{r}
 glimpse(analytic_data_occasions)
 ```
 
-You can quickly convert all character columns to factors using the code below. In this case, that will convert the sex and eye_color columns to factors.
+We have two variables, sex and eye_color, that are categorical variable of type character (i.e., chr). The participant id column is categorical as well, but of type double (i.e., dbl) which is a numeric column. You can quickly convert all character columns to factors using the code below:
 
 ```{r}
 analytic_data_occasions <- analytic_data_occasions %>%
   mutate(across(.cols = where(is.character),
                 .fns = as_factor))
+
 ```
 
 The participant identification number in the id column is a numeric column, so we have handle that column on it's own. 
 
 ```{r}
-analytic_data_occasions <-analytic_data_occasions %>%
+analytic_data_occasions <- analytic_data_occasions %>%
   mutate(id = as_factor(id))
 ```
-
 
 You can ensure all of these columns are now factors using the glimpse() command. 
 
@@ -1217,7 +1245,9 @@ glimpse(analytic_data_occasions)
 
 Inspect the output of the glimpse() command and make sure you have converted all categorical variables to factors - especially those you will use as predictors.
 
-### Screening factors
+**Note:** f you have factors like sex that have numeric data in the column (e.g, 1 and 2) instead of male/female you need to handle the situation differently. The preceding section, Experiment: Within N-way, illustrates how to handle this scenario.
+
+### Factor screening
 
 Inspect the levels of each factor carefully. Make sure that there not any levels present that are incorrect. For example, you wouldn’t want to have the following levels for sex: male, mmale, female. Obviously, mmale is an incorrectly typed version of male. Scan all the factor in your data for erroneous factor levels. The code below displays the factor levels:
 
@@ -1227,6 +1257,7 @@ analytic_data_occasions %>%
   summary()
 ```
 
+
 Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how text output and graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex variable because we want the x-axis of a future graph to display columns in the left to right order: female, male.
 
 ```{r}
@@ -1235,7 +1266,6 @@ analytic_data_occasions <- analytic_data_occasions %>%
                            "intersex",
                            "female",
                            "male"))
-
 ```
 
 For eye color, we want to future graph to be have the most common eye colors on the left so we reorder the factor levels:
@@ -1253,23 +1283,13 @@ analytic_data_occasions %>%
   summary()
 ```
 
-
 ### Numeric screening
 
-For numeric variables, you should search for impossible values. For example, in the context of this example you want to ensure none of the elapsed_times are impossible or so large they appear to be data entry errors.
+For numeric variables, it's important find and remove impossible values. For example, in the context of this example you want to ensure none of the elapsed_times are impossible (e.g., outside the 1 to 5 point rating scale for Likert items) or clearly data entry errors.
 
-One options for doing so is the summary command again. This time, however, we use “is.numeric” in the where() command. However, when a survey has a large number of variables this type of output can become challenging to interpret.
+Because we have several numeric columns that we are screening, we use the skim() command from the skimr package. The skim() command quickly provides basic descriptive statistics. In the output for this command there are also several columns that begin with p: p0, p25, p50, p75, and p100 (p25 and p75 omitted in output due to space). These columns correspond to the 0th, 25th, 50th, 75th, and 100th percentiles, respectively. The minimum and maximum values for the data column are indicated under the p0 and p100 labels. The median is the 50th percentile (p50). The interquartile range is the range between p25 and p75.
 
-```{r, eval = FALSE}
-analytic_data_occasions %>%
-  select(where(is.numeric)) %>%
-  summary()
-```
-
-With larger numbers of variables, it's a good idea to use the skimr package. Additionally, it makes sense to look at sets of items rather than all of the variables at once. This is because sometime items and different response formats. For example, for one measure this responses may range from 1 to 5 whereas for another measure responses could range from 1 to 7. This is undesirable from a psychometric point of view, as discussed previously, but it if happens it makes sense to look at items in sets.
-
-
-Start by examining the range of non-scale items. In this case it's only age. Examine the output to see if any of the age values are unreasonable. In the output p0 and p100 indicate the 0th percentile and the 100th percentile; that is the min an max values for the variable. Check to make sure none of the age values are unreasonably low or high. If they are, you may need to check the original data source or replace them with missing values.
+Start by examining the range of non-scale items. In this case it's only age. Examine the output to see if any of the age values are unreasonable. As noted, in the output p0 and p100 indicate the 0th percentile and the 100th percentile; that is the minimum and maximum values for the variable. Check to make sure none of the age values are unreasonably low or high. If they are, you may need to check the original data source or replace them with missing values.
 
 ```{r, eval = FALSE}
 library(skimr)
@@ -1297,17 +1317,20 @@ outdf$sd = round(outdf$sd,2)
 outdf
 ```
 
-Look the items in the first scale, self-esteem. Possible items responses for this scale range from 1 to 5, make sure they are all in this range. In the output p0 and p100 indicate the 0th percentile and the 100th percentile; that is the minimum an maximum values for the variable in these data. Examine the output to see if any of the esteem values are unreasonable (i.e., fall outside the 1 to 5 range). If any values fall outside this range, you may need to check the original data source or replace them with missing values - as described previously.
+With respect to the multi-item scales, it makes sense to look at sets of items rather than all of the items at once. This is because sometime items from different scales use response ranges. For example, for one measure might use a response scale with a range from 1 to 5 whereas for another measure might use a response scale with a range from 1 to 7. This is undesirable from a psychometric point of view, as discussed previously, but it if happens it your data - look at the scale items separately to make it easy to see out of range values.
 
+We begin by looking at the items in the first scale, self-esteem. Possible items responses for this scale range from 1 to 5, make sure all responses are in this range. If any values fall outside this range, you may need to check the original data source or replace them with missing values - as described previously.
+
+Because we want to select the self-esteem items from both time 1 and time 2 we cannot use the starts_with() command. Instead we use the contains() command in the code below.
 
 ```{r, eval=FALSE}
 analytic_data_occasions %>%
-  select(starts_with("t1_esteem")) %>%
+  select(contains("esteem")) %>%
   skim()
 ```
 ```{r, echo=FALSE}
 outdf <- analytic_data_occasions %>%
-  select(starts_with("t1_esteem")) %>%
+  select(contains("esteem")) %>%
   skim_without_charts() %>%
   as_tibble() %>%
   select(-skim_type) %>%
@@ -1323,23 +1346,60 @@ outdf$sd = round(outdf$sd,2)
 outdf
 ```
 
-Follow the same process t2_esteem items, t1_jobsat items, and t2_jobsat items. Possible items responses for these scale ranges from 1 to 5, make sure all responses are all in this range. If any values fall outside this range, you may need to check the original data source or replace them with missing values - as described previously.
+Follow the same process for the job satisfaction items. Possible items responses for the job satisfaction scale range from 1 to 5, make sure all responses are in this range. If any values fall outside this range, you may need to check the original data source or replace them with missing values - as described previously.
+
+
+```{r, eval=FALSE}
+analytic_data_occasions %>%
+  select(contains("jobsat")) %>%
+  skim()
+```
+```{r, echo=FALSE}
+outdf <- analytic_data_occasions %>%
+  select(contains("jobsat")) %>%
+  skim_without_charts() %>%
+  as_tibble() %>%
+  select(-skim_type) %>%
+    rename_with(.fn = str_remove,
+              .cols = everything(),
+              pattern = "numeric.") %>%
+  select(-p25, -complete_rate, -p75) %>%
+  as.data.frame()
+
+outdf$mean = round(outdf$mean,2)
+outdf$sd = round(outdf$sd,2)
+
+outdf
+```
 
 ### Scale scores
 
+Scale scores involve averaging, for each person, their score over several items to create an overall scale score. The first step in the creation of scales if correcting the values of any reverse-keyed items.
+
 #### Reverse key items
 
-Scale scores involve averaging, for each person, their score over several items to create an overall scale score. The first step in the creation of scales if correcting the values of any reverse-keyed items, as described previously. The logic of the math behind this correction is described previously in Surveys: Single occasion. 
+The way you deal with reverse-keyed items depends on how you scored them. Imagine you had a 5-point scale. You could have scored the scale with the values 1, 2, 3, 4, and 5. Alternatively, you could have scored the scale with the values 0, 1, 2, 3, and 4. The mathematical approach you use to correcting reverse-keyed items depends upon whether the scale starts with 1 or 0.
 
+In this example, we scored the data using the 1 to 5 system. So use the correct approach for scales that being with 1. The preceding section, Surveys: Single occasion, describes how the math differs when the response scale starts with 0. I encourage you to read that section before going further if you have not done so already.
 
-In these data, the items use a 1 to 5 response scale so we use the reverse item correction for response scales that begin with 1.  See Surveys: Single occasion for how to handle a response format that begins with zero - the math is different.
-
-The code below:
-* selects each column that ends with "_rev15" (i.e., both esteem and jobsat scales)
-* subtracts each value in that column from 6
-* renames the column by removing "_rev15" because the reverse coding is complete.
+In this data file all the reverse-keyed were identified with the suffix "_rev15" in the column names. This suffix indicates the item was reverse-keyed and that the original scale used the response points 1 to 5. We can see those items with the glimpse() command below. Notice that there are two reverse-keyed items - each on difference scales.
 
 ```{r}
+analytic_data_survey %>%
+  select(ends_with("_rev15")) %>%
+  glimpse()
+```
+
+
+To correct a reverse-keyed items where the lowest possible rating value is a 1 (i.e, 1 on a 1 to 5 scale), we simply subtract all the scores from a value one more than the highest possible rating (i.e., 6). 
+
+The code below:
+
+* selects each column that ends with "_rev15" (i.e., both esteem and jobsat scales)
+* subtracts each value in that column from 6
+* renames the column by removing "_rev15" from the name because the reverse coding is complete.
+
+```{r,echo=TRUE,eval=TRUE}
 analytic_data_occasions <- analytic_data_occasions %>% 
   mutate(6 - across(.cols = ends_with("_rev15")) ) %>% 
   rename_with(.fn = str_remove,
@@ -1347,15 +1407,19 @@ analytic_data_occasions <- analytic_data_occasions %>%
               pattern = "_rev15")
 ```
 
+You can use the glimpse() command to see the result of your work. If you compare this to values from the previous glimpse() command you can see they have changed. Also notice the column names no longer indicate the items are reverse-keyed.
+
+
 #### Creating scores
 
-The process we use for creating scale scores deletes item level data from analytic_data_survey. This is a desirable aspect of the process we it removes information we are no longer interested in from our analytic data. That said, before we create scale score, we create a backup on the item level data called analytic_data_survey_items. We will need to use this backup later to compute the reliability of the scales we are creating.
+The process we use for creating scale scores deletes item level data from analytic_data_survey. This is a desirable aspect of the process because it removes information we are no longer interested in from our analytic data. That said, before we create scale score, we create a backup on the item level data called analytic_data_survey_items. We will need to use this backup later to compute the reliability of the scales we are creating.
 
 ```{r}
-analytic_occasions_items <- analytic_data_occasions
+analytic_data_occasions_items <- analytic_data_occasions
 ```
 
-We want to make a self_esteem scale and plan to select items using starts_with("esteem"). But prior to doing this we make sure the start_with() command only gives us the items we want - and not additional unwanted items. The output below confirms there are not problems associated with using starts_with("esteem").
+
+We want to make a self_esteem scale and plan to select items using starts_with("t1_esteem"). But prior to doing this we make sure the start_with() command only gives us the items we want - and not additional unwanted items. The output below confirms there are not problems associated with using starts_with("t1_esteem").
 
 ```{r}
 analytic_data_occasions %>%
@@ -1363,8 +1427,12 @@ analytic_data_occasions %>%
   glimpse()
 ```
 
-Repeat this set of commands using t2_esteem, t1_jobsat, and t2_jobsat. Make sure that those terms select only the relevant items and not others.
+Repeat this set of commands using t2_esteem, t1_jobsat, and t2_jobsat. Make sure that those start_with() terms select only the relevant items and not others.
 
+
+We calculate the scale scores using the rowwise() command. The mean() command provides the mean of columns by default - not people. We use the rowwise() command in the code below to make the mean() command  work across columns (within participants) rather than within columns. The mutate command calculates the scale score for each person. The c_across() command combined with the starts_with() command ensures the items we want averaged together are the items that are averaged together. Notice there is a separate mutate line for each scale. The ungroup() command turns off the rowwise() command. We end the code block by removing the item-level data from the data set.
+
+**Important:** Take note of how we names the scale variables (e.g., esteem_t1, jobsat_t1) use a slightly different convention than our items. That is, these scale labels were picked so that they would *not* be selected by a starts_with("t1_esteem") or starts_with("t1_jobsat"). Why? Because we later use those commands to remove the item-level data. We would want the command designed to remove the item-level data to also remove the scale we just calculated! This example illustrates how carefully you need to think about your naming conventions.
 
 
 ```{r}
@@ -1385,6 +1453,8 @@ analytic_data_occasions <- analytic_data_occasions %>%
   select(-starts_with("t2_jobsat"))
 
 ```
+
+We can see our data now has the columns t1_esteem, t2_esteem, t1_jobsat, and t2_jobsat. As well, we can see that all of the item level data has been removed from the data set.
 
 ```{r}
 glimpse(analytic_data_occasions)
@@ -1520,7 +1590,7 @@ analytic_data_survey_items %>%
 We calculated reliability using psych::alpha() command.  Cronbach’s alpha is labeled “raw alpha” in the output. Cronbach's alpha is an estimate of the proportion of variability in observed scores that is due to actual differences among participants (rather than measurement error).
 
 ```{r, eval = TRUE}
-rxx_alpha <- analytic_occasions_items %>%
+rxx_alpha <- analytic_data_occasions_items %>%
   select(starts_with("t1_esteem")) %>%
   psych::alpha()
 
