--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -252,6 +252,9 @@ As you make a script for each example:
 
 * Recall the instruction from Chapter 1 about running library(tidyverse) before you type the rest of each script - this provides you with tidyverse autocomplete for the script.
 
+* After you type each new block of code in an example, save your script.
+
+* After you type each new block of code in an example do two additional things: 1) Session Restart R, 2) Run your script using Source with Echo.
 
 ## Entering data into spreadsheets
 
