--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -1466,7 +1466,7 @@ glimpse(analytic_data_occasions)
 ### Pivot to tidy data
 
 The analytic data in its current for does not conform to the the tidy data specification. Inspect the data with the print() command.
-Notice that a single column is not used to represent esteem, jobsat, or time. Rather, there are four columns that are a mix of these variables. The consequence of this is that there are two esteem ratings/observations on each row and two jobsat ratings/observations on each row. Tidy data is structured so that each varible is represented in a single column and each observation has its own row.
+Notice that a single column is not used to represent esteem, jobsat, or time. Rather, there are four columns that are a mix of these variables. The consequence of this is that there are two esteem ratings/observations on each row and two jobsat ratings/observations on each row. Tidy data is structured so that each variable is represented in a single column and each observation has its own row.
 
 
 ```{r}
