--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -188,6 +188,9 @@ If you inspect the Files pane on the right of the screen you see the  **data_okc
 
 Once your command looks like the one below select the text and click on the "Run" button.
 
+Note: If you are not in the class, the data file is available from: https://github.com/dstanley4/psyc6060bookdown
+
+
 ```{r firstread}
 okcupid_profiles <- read_csv(file = "data_okcupid.csv")
 
