--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -25,12 +25,85 @@ The files are available at: https://github.com/dstanley4/psyc6060bookdown
 
 ## Notation
 
+In this chapter we will use summation notation in the formulas describing population. If you are not familiar with summation notation, we present a brief overview here.
 
+Consider a scenario where we have the IQ data for three participants We use the N symbol to represent sample size. Because we have three participants N = 3. The data for these participants is illustrated in Figure \@ref(fig:notationdata).
 
-Figure  \@ref(fig:notationdata)
+Notice how each person in the data set can be represent by the variable X. The first person by X_1, the second by X2, and the third by X_3. Often we refer to individuals in a data set by using the variable X accompanied by a subscript (e.g., 1, 2, 3, etc.).
 
-
-```{r notationdata, echo = FALSE, out.width="40%", fig.cap = "Data for understanding summation notation"}
+```{r notationdata, echo = FALSE, out.width="55%", fig.cap = "Data for understanding summation notation"}
 knitr::include_graphics("ch_populations/images/screenshot_data_n6.png")
 ```
+
+Referring to participants using the variable X and subscript is valuable because it can be used in conjunction with the sigma (i.e., $\Sigma$) symbol for summation. Consider the example below in which we use the summation notation to indicate that we want to add all the X values (representing IQ) for the participants. We use a lower case i to represent all possible subscript values. The notation below the $\Sigma$, i = 1, indicates that we should start with participant 1. The notation below the $\Sigma$,  N, indicates that we should iterate i up to the value indicated by N; in this case 3, because there are three participants.
+
+$$
+\begin{aligned} 
+\sum_{i=1}^{N} X_i &=  X_1 + X_2 + X_3\\ 
+&= 110 + 120 + 100 \\
+&= 330
+\end{aligned} 
+$$
+
+Sometime to simplify the notation, the numbers above and below the $Sigma$ symbol are omitted. Likewise, the i subscript is omitted. There is a general understanding that we these components of the notation are omitted that the version of the notation above is implied.
+
+$$
+\begin{aligned} 
+\sum{X} &= X_1 + X_2 + X_3\\ 
+&= 110 + 120 + 100\\
+&= 330
+\end{aligned} 
+$$
+
+
+The full version of the notation can be used to indicate how a mean is calculated.
+
+
+$$
+\begin{aligned} 
+\bar{X} &= \frac{\sum_{i=1}^{N} X_i}{N} \\
+&= \frac{X_1 + X_2 + X_3}{3}\\ 
+&= \frac{110 + 120 + 100}{3}\\
+&= \frac{330}{3}\\
+&= 110\\
+\end{aligned} 
+$$
+
+Likewise, the concise version of the notation can be used to indicate how a mean is calculated.
+
+$$
+\begin{aligned} 
+\bar{X} &= \frac{\sum{X}}{N} \\
+&= \frac{X_1 + X_2 + X_3}{3}\\ 
+&= \frac{110 + 120 + 100}{3}\\
+&= \frac{330}{3}\\
+&= 110\\
+\end{aligned} 
+$$
+
+A common task in statistics is to calculate 1) the squared distance between each person and the mean, and 2) add up those squared differences. This calculation is easily expressed with the full version of the notation.
+
+$$
+\begin{aligned} 
+\sum_{i=1}^{N}{(X_i - \bar{X})^2} &= (X_1-\bar{X})^2 + (X_2-\bar{X})^2 + (X_3-\bar{X})^2\\ 
+&= (110-110)^2 + (120-110)^2 + (100-110)^2\\
+&= (0)^2 + (10)^2 (-10)^2 \\
+&= 0 + 100 + 100 \\
+&= 200
+\end{aligned} 
+$$
+
+Likewise, the sum of the squared deviations from the mean can be expressed using the concise version of the notation.
+
+$$
+\begin{aligned} 
+\sum{(X - \bar{X})^2} &= (X_1-\bar{X})^2 + (X_2-\bar{X})^2 + (X_3-\bar{X})^2\\ 
+&= (110-110)^2 + (120-110)^2 + (100-110)^2\\
+&= (0)^2 + (10)^2 (-10)^2 \\
+&= 0 + 100 + 100 \\
+&= 200
+\end{aligned} 
+$$
+
+
 
