--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -535,7 +535,7 @@ For numeric variables, it's important find and remove impossible values. For exa
 Because we have several numeric columns that we are screening, we use the skim() command from the skimr package. The skim() command quickly provides basic descriptive statistics. In the output for this command there are also several columns that begin with p: p0, p25, p50, p75, and p100 (p25 and p75 omitted in output due to space). These columns correspond to the 0th, 25th, 50th, 75th, and 100th percentiles, respectively. The minimum and maximum values for the data column are indicated under the p0 and p100 labels. The median is the 50th percentile (p50). The interquartile range is the range between p25 and p75.
 
 
-```{r}
+```{r, eval = FALSE}
 library(skimr)
 
 analytic_data_within %>%
@@ -740,7 +740,7 @@ For numeric variables, it's important find and remove impossible values. For exa
 Because we have several numeric columns that we are screening, we use the skim() command from the skimr package. The skim() command quickly provides basic descriptive statistics. In the output for this command there are also several columns that begin with p: p0, p25, p50, p75, and p100 (p25 and p75 omitted in output due to space). These columns correspond to the 0th, 25th, 50th, 75th, and 100th percentiles, respectively. The minimum and maximum values for the data column are indicated under the p0 and p100 labels. The median is the 50th percentile (p50). The interquartile range is the range between p25 and p75.
 
 
-```{r}
+```{r, eval = FALSE}
 library(skimr)
 
 analytic_data_within_nway %>%
