--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -545,6 +545,7 @@ analytic_data_within %>%
 
 ```{r, echo=FALSE}
 library(tidyverse)
+library(skimr)
 
 outdf <- analytic_data_within %>%
   select(where(is.numeric)) %>%
