--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -202,7 +202,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-07-07}
+\date{2020-07-09}
 
 \begin{document}
 \maketitle
@@ -263,69 +263,84 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ## Locale: en_CA.UTF-8 / en_CA.UTF-8 / en_CA.UTF-8 / C / en_CA.UTF-8 / en_CA.UTF-8
 ## 
 ## Package version:
-##   acepack_1.4.1       askpass_1.1        
-##   assertthat_0.2.1    backports_1.1.7    
-##   base64enc_0.1-3     BH_1.72.0.3        
-##   bookdown_0.19.1     broom_0.7.0.9000   
-##   callr_3.4.3         cellranger_1.1.0   
-##   checkmate_2.0.0     cli_2.0.2          
-##   clipr_0.7.0         cluster_2.1.0      
-##   colorspace_1.4-1    compiler_4.0.2     
-##   crayon_1.3.4        curl_4.3           
-##   data.table_1.12.8   DBI_1.1.0          
-##   dbplyr_1.4.3        desc_1.2.0         
-##   digest_0.6.25       dplyr_1.0.0        
-##   ellipsis_0.3.1      evaluate_0.14      
-##   fansi_0.4.1         farver_2.0.3       
-##   forcats_0.5.0       foreign_0.8-80     
-##   Formula_1.2-3       fs_1.4.1           
-##   generics_0.0.2      ggplot2_3.3.1      
-##   glue_1.4.1          graphics_4.0.2     
-##   grDevices_4.0.2     grid_4.0.2         
-##   gridExtra_2.3       gtable_0.3.0       
-##   haven_2.3.1         highr_0.8          
-##   Hmisc_4.4-0         hms_0.5.3          
-##   htmlTable_2.0.0     htmltools_0.4.0    
-##   htmlwidgets_1.5.1   httr_1.4.1         
-##   isoband_0.2.1       janitor_2.0.1      
-##   jpeg_0.1-8.1        jsonlite_1.6.1     
-##   knitr_1.28          labeling_0.3       
-##   lattice_0.20-41     latticeExtra_0.6-29
-##   lifecycle_0.2.0     lubridate_1.7.8    
-##   magrittr_1.5        markdown_1.1       
-##   MASS_7.3.51.6       Matrix_1.2-18      
-##   methods_4.0.2       mgcv_1.8.31        
-##   mime_0.9            mnormt_1.5-7       
-##   modelr_0.1.8        munsell_0.5.0      
-##   nlme_3.1-148        nnet_7.3-14        
-##   openssl_1.4.1       packrat_0.5.0      
-##   parallel_4.0.2      pillar_1.4.4       
-##   pkgbuild_1.0.8      pkgconfig_2.0.3    
-##   pkgload_1.1.0       png_0.1-7          
-##   praise_1.0.0        prettyunits_1.1.1  
-##   processx_3.4.2      progress_1.2.2     
-##   ps_1.3.3            psych_1.9.12.31    
-##   purrr_0.3.4         R6_2.4.1           
-##   RColorBrewer_1.1-2  Rcpp_1.0.4.6       
-##   readr_1.3.1         readxl_1.3.1       
-##   rematch_1.0.1       repr_1.1.0         
-##   reprex_0.3.0        rlang_0.4.6        
-##   rmarkdown_2.2       rpart_4.1-15       
-##   rprojroot_1.3.2     rstudioapi_0.11    
-##   rvest_0.3.5         scales_1.1.1       
-##   selectr_0.4.2       skimr_2.1.1        
-##   snakecase_0.11.0    splines_4.0.2      
-##   stats_4.0.2         stringi_1.4.6      
-##   stringr_1.4.0       survival_3.1-12    
-##   sys_3.3             testthat_2.3.2     
-##   tibble_3.0.1        tidyr_1.1.0        
-##   tidyselect_1.1.0    tidyverse_1.3.0    
-##   tinytex_0.23        tools_4.0.2        
-##   utf8_1.1.4          utils_4.0.2        
-##   vctrs_0.3.0         viridis_0.5.1      
-##   viridisLite_0.3.0   whisker_0.4        
-##   withr_2.2.0         xfun_0.14          
-##   xml2_1.3.2          yaml_2.2.1
+##   abind_1.4.5              acepack_1.4.1           
+##   arm_1.11.1               askpass_1.1             
+##   assertthat_0.2.1         backports_1.1.8         
+##   base64enc_0.1-3          BH_1.72.0.3             
+##   bookdown_0.19.1          boot_1.3.25             
+##   broom_0.7.0.9000         callr_3.4.3             
+##   cellranger_1.1.0         checkmate_2.0.0         
+##   cli_2.0.2                clipr_0.7.0             
+##   cluster_2.1.0            coda_0.19.3             
+##   colorspace_1.4-1         compiler_4.0.2          
+##   crayon_1.3.4             curl_4.3                
+##   data.table_1.12.8        DBI_1.1.0               
+##   dbplyr_1.4.3             desc_1.2.0              
+##   digest_0.6.25            dplyr_1.0.0             
+##   ellipsis_0.3.1           evaluate_0.14           
+##   fansi_0.4.1              farver_2.0.3            
+##   forcats_0.5.0            foreign_0.8-80          
+##   Formula_1.2-3            fs_1.4.1                
+##   generics_0.0.2           ggplot2_3.3.2           
+##   glue_1.4.1               graphics_4.0.2          
+##   grDevices_4.0.2          grid_4.0.2              
+##   gridExtra_2.3            gsl_2.1.6               
+##   gtable_0.3.0             haven_2.3.1             
+##   highr_0.8                Hmisc_4.4-0             
+##   hms_0.5.3                htmlTable_2.0.0         
+##   htmltools_0.4.0          htmlwidgets_1.5.1       
+##   httr_1.4.1               isoband_0.2.2           
+##   janitor_2.0.1            jpeg_0.1-8.1            
+##   jsonlite_1.6.1           knitr_1.28              
+##   labeling_0.3             lattice_0.20-41         
+##   latticeExtra_0.6-29      lavaan_0.6.6            
+##   learnSampling_0.2        lifecycle_0.2.0         
+##   lme4_1.1.23              lubridate_1.7.8         
+##   magrittr_1.5             markdown_1.1            
+##   MASS_7.3.51.6            Matrix_1.2-18           
+##   matrixcalc_1.0.3         MBESS_4.7.0             
+##   methods_4.0.2            mgcv_1.8.31             
+##   mi_1.0                   mime_0.9                
+##   minqa_1.2.4              mnormt_2.0.0            
+##   modelr_0.1.8             munsell_0.5.0           
+##   mvtnorm_1.1.1            nlme_3.1-148            
+##   nloptr_1.2.2.1           nnet_7.3-14             
+##   numDeriv_2016.8.1.1      OpenMx_2.17.4           
+##   openssl_1.4.1            packrat_0.5.0           
+##   parallel_4.0.2           pbapply_1.4.2           
+##   pbivnorm_0.6.0           pillar_1.4.4            
+##   pkgbuild_1.0.8           pkgconfig_2.0.3         
+##   pkgload_1.1.0            png_0.1-7               
+##   praise_1.0.0             predictionInterval_1.0.0
+##   prettyunits_1.1.1        processx_3.4.2          
+##   progress_1.2.2           ps_1.3.3                
+##   psych_1.9.12.31          purrr_0.3.4             
+##   R6_2.4.1                 RColorBrewer_1.1-2      
+##   Rcpp_1.0.4.6             RcppEigen_0.3.3.7.0     
+##   RcppParallel_5.0.2       readr_1.3.1             
+##   readxl_1.3.1             rematch_1.0.1           
+##   repr_1.1.0               reprex_0.3.0            
+##   rlang_0.4.6              rmarkdown_2.2           
+##   rpart_4.1-15             rpf_1.0.4               
+##   rprojroot_1.3.2          rsconnect_0.8.16        
+##   rstudioapi_0.11          rvest_0.3.5             
+##   scales_1.1.1             selectr_0.4.2           
+##   sem_3.1.11               semTools_0.5.3          
+##   skimr_2.1.1              snakecase_0.11.0        
+##   splines_4.0.2            StanHeaders_2.21.0.5    
+##   statmod_1.4.34           stats_4.0.2             
+##   stats4_4.0.2             stringi_1.4.6           
+##   stringr_1.4.0            survival_3.1-12         
+##   sys_3.3                  testthat_2.3.2          
+##   tibble_3.0.1             tidyr_1.1.0             
+##   tidyselect_1.1.0         tidyverse_1.3.0         
+##   tinytex_0.23             tmvnsim_1.0-2           
+##   tools_4.0.2              utf8_1.1.4              
+##   utils_4.0.2              vctrs_0.3.1             
+##   viridis_0.5.1            viridisLite_0.3.0       
+##   whisker_0.4              withr_2.2.0             
+##   xfun_0.14                xml2_1.3.2              
+##   yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -1306,6 +1321,22 @@ More than one calculation can occur in the same summarise() command. You can eas
 ## 1     32.3   9.45
 \end{verbatim}
 
+Often this process does too much rounding. We can get more exact results by adding an as.data.frame() to the end of the commands.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{okcupid_profiles }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{age_mean =} \KeywordTok{mean}\NormalTok{(age, }\DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{),}
+            \DataTypeTok{age_sd =} \KeywordTok{sd}\NormalTok{(age, }\DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{as.data.frame}\NormalTok{()}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+##   age_mean age_sd
+## 1    32.34  9.453
+\end{verbatim}
+
 \hypertarget{filter}{%
 \subsection{filter()}\label{filter}}
 
@@ -1715,22 +1746,21 @@ If a future chapter you will see how we can select factors using where(is.factor
 
 The summarise() command can summarise multiple columns when combined with starts\_with(), ends\_with(), contains(), matches(), and where(). However, to use these powerful tools for indicating columns with the summarise command we need to help of the across command (i.e., across multiple columns).
 
-If we want to obtain the mean of all the columns that start with ``t1'' we use the commands below. The across command requires that we indicate the columns we want via the .cols argument and the command/function we want to run on those columns via the .fns argument. In the example below, we also add na.rm = TRUE at the end; this is something we send to the mean command to let it know how we want to handle missing data.
+If we want to obtain the mean of all the columns that start with ``t1'' we use the commands below. The across command requires that we indicate the columns we want via the .cols argument and the command/function we want to run on those columns via the .fns argument. In the example below, we also add na.rm = TRUE at the end; this is something we send to the mean command to let it know how we want to handle missing data. We add as.data.frame() to get a larger number of decimals.
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{data_exp }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{summarise}\NormalTok{(}\KeywordTok{across}\NormalTok{(}\DataTypeTok{.cols =} \KeywordTok{starts_with}\NormalTok{(}\StringTok{"t1"}\NormalTok{), }
                    \DataTypeTok{.fns =}\NormalTok{ mean,}
-                   \DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{))}
+                   \DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{as.data.frame}\NormalTok{()}
 \end{Highlighting}
 \end{Shaded}
 
 \begin{verbatim}
-## # A tibble: 1 x 2
 ##   t1_vomit t1_aggression
-##      <dbl>         <dbl>
-## 1     1.83           5.5
+## 1    1.833           5.5
 \end{verbatim}
 
 If you want to get fancy, you can also add this .names argument below which tells R to call label each output mean by the column name followed by "\_mean".
@@ -1741,15 +1771,14 @@ If you want to get fancy, you can also add this .names argument below which tell
 \StringTok{  }\KeywordTok{summarise}\NormalTok{(}\KeywordTok{across}\NormalTok{(}\DataTypeTok{.cols =} \KeywordTok{starts_with}\NormalTok{(}\StringTok{"t1"}\NormalTok{), }
                    \DataTypeTok{.fns =}\NormalTok{ mean,}
                    \DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{,}
-                   \DataTypeTok{.names =} \StringTok{"\{col\}_mean"}\NormalTok{))}
+                   \DataTypeTok{.names =} \StringTok{"\{col\}_mean"}\NormalTok{))  }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{as.data.frame}\NormalTok{()}
 \end{Highlighting}
 \end{Shaded}
 
 \begin{verbatim}
-## # A tibble: 1 x 2
 ##   t1_vomit_mean t1_aggression_mean
-##           <dbl>              <dbl>
-## 1          1.83                5.5
+## 1         1.833                5.5
 \end{verbatim}
 
 Often you want to calculate more than one statistic for each column. For example, you might want the mean, standard deviation, min, and max. These statistics can be calculated via the mean, sd, min, and max commands, respectively. However, you need to create a list with the statistics you desire.
@@ -1771,16 +1800,16 @@ Once you have created the list of descriptive statistics you want you can run th
 \begin{Highlighting}[]
 \NormalTok{data_exp }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{summarise}\NormalTok{(}\KeywordTok{across}\NormalTok{(}\DataTypeTok{.cols =} \KeywordTok{starts_with}\NormalTok{(}\StringTok{"t1"}\NormalTok{), }
-                   \DataTypeTok{.fns =}\NormalTok{ desired_descriptives))}
+                   \DataTypeTok{.fns =}\NormalTok{ desired_descriptives)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{as.data.frame}\NormalTok{()}
 \end{Highlighting}
 \end{Shaded}
 
 \begin{verbatim}
-## # A tibble: 1 x 4
-##   t1_vomit_mean t1_vomit_sd t1_aggression_m~
-##           <dbl>       <dbl>            <dbl>
-## 1          1.83        1.17              5.5
-## # ... with 1 more variable: t1_aggression_sd <dbl>
+##   t1_vomit_mean t1_vomit_sd t1_aggression_mean
+## 1         1.833       1.169                5.5
+##   t1_aggression_sd
+## 1            1.871
 \end{verbatim}
 
 Consequently, we add the t() command (i.e., transpose command) to the end of the summarise request to get a more readable list of statistics:
@@ -1795,7 +1824,8 @@ Consequently, we add the t() command (i.e., transpose command) to the end of the
 \NormalTok{data_exp }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{summarise}\NormalTok{(}\KeywordTok{across}\NormalTok{(}\DataTypeTok{.cols =} \KeywordTok{starts_with}\NormalTok{(}\StringTok{"t1"}\NormalTok{), }
                    \DataTypeTok{.fns =}\NormalTok{ desired_descriptives)) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{t}\NormalTok{()}
+\StringTok{  }\KeywordTok{as.data.frame}\NormalTok{() }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{t}\NormalTok{() }
 \end{Highlighting}
 \end{Shaded}
 
@@ -4734,6 +4764,129 @@ Likewise, the sum of the squared deviations from the mean can be expressed using
 &= 200
 \end{aligned} 
 \]
+
+\hypertarget{population-vs-samples}{%
+\section{Population vs samples}\label{population-vs-samples}}
+
+As we move closer to conducting our own research it is critical to make a distinction between populations and samples. A populations is the complete set of people/animals about which we want to make conclusions. Samples are a subset of the total number of people/animals in the population. In most scenarios it is impractical to work with an entire population and, for practical reasons, we study a subset of the population called a sample.
+
+Researchers, and consumers of research, typically have little interest in making conclusions at the sample level. In general, we care about conclusions that generalize to the population not conlusions that only apply to specific individuals in the sample. Consider the case of COVID-19. Imagine a team of researchers creates a vaccine that they hope creates immunity to COVID-19. We care very little if the immunity only works for the specific indiviudals in the study. However, we care a great deal with if the immunity works, or is likely to work, for all Canadians or all humans. Thus, we study samples but typically wish to make conclusions that apply to the population.
+
+Statistic tests are means of helping researchers use sample data to make conclusions at the population level. When we calculate numbers based on all of the people/animals in the population we refer to those numbers as \textbf{parameters}. We calculate numbers based on the people/animals in the sample we refer to those numbers as \textbf{statistics}. In general, statistics are used to estimate parameters.
+
+\hypertarget{describing-populations}{%
+\section{Describing populations}\label{describing-populations}}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(tidyverse)}
+\KeywordTok{library}\NormalTok{(learnSampling)}
+
+\NormalTok{pop_data <-}\StringTok{ }\KeywordTok{get_height_population}\NormalTok{() }
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{pop_data }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{pop_mean =} \KeywordTok{mean}\NormalTok{(height)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{as.data.frame}\NormalTok{()}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+##   pop_mean
+## 1    172.5
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{# set.seed ensures you get the same random samples}
+\KeywordTok{set.seed}\NormalTok{(}\DecValTok{1}\NormalTok{) }
+
+\NormalTok{many_samples <-}\StringTok{ }\KeywordTok{get_M_samples}\NormalTok{(}\DataTypeTok{pop.data =}\NormalTok{ pop_data, }
+                              \DataTypeTok{data.column.name =}\NormalTok{ height,}
+                              \DataTypeTok{n =} \DecValTok{10}\NormalTok{,}
+                              \DataTypeTok{number.of.samples =} \DecValTok{1000}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+The many\_sample data set contains the results for all of the random samples we specified. Use head() to see the data. Each row corresponds to a random sample.
+In that row the sample number, sample size, population mean, and sample mean are provided (along with a few other numbers.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{head}\NormalTok{(many_samples)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+##   sample.number  n pop.M sample.M pop.var sample.var.n
+## 1             1 10 172.5    175.5   157.5       189.85
+## 2             2 10 172.5    169.6   157.5       196.64
+## 3             3 10 172.5    161.7   157.5        92.61
+## 4             4 10 172.5    178.4   157.5       102.04
+## 5             5 10 172.5    174.7   157.5       350.81
+## 6             6 10 172.5    166.0   157.5       236.00
+##   sample.var.n_1
+## 1          210.9
+## 2          218.5
+## 3          102.9
+## 4          113.4
+## 5          389.8
+## 6          262.2
+\end{verbatim}
+
+We can glimpse() the many\_sample data to confirm the total number of rows is that same as we requested.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{glimpse}\NormalTok{(many_samples)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Rows: 1,000
+## Columns: 7
+## $ sample.number  <int> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1...
+## $ n              <dbl> 10, 10, 10, 10, 10, 10, 10, 10, ...
+## $ pop.M          <dbl> 172.5, 172.5, 172.5, 172.5, 172....
+## $ sample.M       <dbl> 175.5, 169.6, 161.7, 178.4, 174....
+## $ pop.var        <dbl> 157.5, 157.5, 157.5, 157.5, 157....
+## $ sample.var.n   <dbl> 189.85, 196.64, 92.61, 102.04, 3...
+## $ sample.var.n_1 <dbl> 210.94, 218.49, 102.90, 113.38, ...
+\end{verbatim}
+
+Sampling variability
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{ggplot}\NormalTok{(}\DataTypeTok{data =}\NormalTok{ many_samples,}
+       \DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{x =}\NormalTok{ sample.M)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_histogram}\NormalTok{()}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## `stat_bin()` using `bins = 30`. Pick better value with
+## `binwidth`.
+\end{verbatim}
+
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-208-1.pdf}
+
+Although any
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{many_samples }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{mean_of_means =} \KeywordTok{mean}\NormalTok{(sample.M))}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+##   mean_of_means
+## 1         172.6
+\end{verbatim}
 
 \cleardoublepage
 
