--- a/packages.bib
+++ b/packages.bib
@@ -31,7 +31,7 @@
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
   year = {2020},
-  note = {R package version 3.3.1},
+  note = {R package version 3.3.2},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 @Manual{R-janitor,
@@ -47,6 +47,12 @@
   year = {2020},
   note = {R package version 1.28},
   url = {https://CRAN.R-project.org/package=knitr},
+}
+@Manual{R-learnSampling,
+  title = {learnSampling: Tools to help learn sampling},
+  author = {David J. Stanley},
+  year = {2020},
+  note = {R package version 0.2},
 }
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
